--- a/examples/DOM/index.html
+++ b/examples/DOM/index.html
@@ -45,6 +45,7 @@
             </span>
             </span>
         </div>
+        <script type="text/javascript" src="./jquery-1.11.2.js"></script>
         <script type="text/javascript" src="./layout_struct.js"></script>
     </body>
 </html>
